// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 .supportImageContainerClass {
  display: none;
}

.c1 .supportSummaryClass {
  display: none;
}

.c1 .summaryHidden {
  display: none;
}

.c1 .leadSummary125Class {
  display: block;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  width: 100%;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c2 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c1 .leadHeadlineClass {
    font-size: 30px;
    line-height: 30px;
  }

  .c1 .leadImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
  }

  .c1 .leadContentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-bottom: 10px;
    min-width: 300px;
  }

  .c1 .supportImageContainerClass {
    display: block;
  }

  .c1 .leadSummary125Class {
    display: block;
  }

  .c1 .leadSummary175Class {
    display: none;
  }
}

@media (min-width:768px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
  }
}

@media (min-width:1024px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding-bottom: 10px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 0px;
    padding-right: 0px;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c6 {
    -webkit-box-flex: 1.5;
    -webkit-flex-grow: 1.5;
    -ms-flex-positive: 1.5;
    flex-grow: 1.5;
  }
}

<div
  className="c0 c1 configweb__Base-sc-11p999w-2 c0 configweb__Base-sc-11p999w-0 c1 css-view-1dbjc4n"
>
  <div
    className="c2 responsiveweb__SliceContainer-sc-2kg7gs-0 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 c4 c5 responsiveweb__Base-sc-1xpiscc-3 c3 responsiveweb__Base-sc-1xpiscc-2 c4 responsiveweb__Base-sc-1xpiscc-0 c5 css-view-1dbjc4n"
    >
      <div
        className="c6 c7 c8 responsiveweb__Base-sc-1xpiscc-7 c6 responsiveweb__Base-sc-1xpiscc-6 c7 responsiveweb__Base-sc-1xpiscc-4 c8 css-view-1dbjc4n"
      >
        <div
          className="css-text-76zvg2"
        >
          lead
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. two child elements 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c1 .supportImageContainerClass {
  display: none;
}

.c1 .supportSummaryClass {
  display: none;
}

.c1 .summaryHidden {
  display: none;
}

.c1 .leadSummary125Class {
  display: block;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c11 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c2 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c9 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c1 .leadHeadlineClass {
    font-size: 30px;
    line-height: 30px;
  }

  .c1 .leadImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
  }

  .c1 .leadContentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-bottom: 10px;
    min-width: 300px;
  }

  .c1 .supportImageContainerClass {
    display: block;
  }

  .c1 .leadSummary125Class {
    display: block;
  }

  .c1 .leadSummary175Class {
    display: none;
  }
}

@media (min-width:768px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
  }
}

@media (min-width:1024px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding-bottom: 10px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c6 {
    -webkit-box-flex: 2.75;
    -webkit-flex-grow: 2.75;
    -ms-flex-positive: 2.75;
    flex-grow: 2.75;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 3;
    -webkit-flex-grow: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c11 {
    margin-top: 0;
  }
}

<div
  className="c0 c1 configweb__Base-sc-11p999w-2 c0 configweb__Base-sc-11p999w-0 c1 css-view-1dbjc4n"
>
  <div
    className="c2 responsiveweb__SliceContainer-sc-2kg7gs-0 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 c4 c5 responsiveweb__Base-sc-1xpiscc-3 c3 responsiveweb__Base-sc-1xpiscc-1 c4 responsiveweb__Base-sc-1xpiscc-0 c5 css-view-1dbjc4n"
    >
      <div
        className="c6 c7 c8 responsiveweb__Base-sc-1xpiscc-7 c6 responsiveweb__Base-sc-1xpiscc-5 c7 responsiveweb__Base-sc-1xpiscc-4 c8 css-view-1dbjc4n"
      >
        <div
          className="css-text-76zvg2"
        >
          lead
        </div>
      </div>
      <div
        className="c9 responsiveweb-sc-2kg7gs-1 c9 css-view-1dbjc4n"
      />
      <div
        className="c10 responsiveweb__SupportsContainer-sc-1xpiscc-8 c10 css-view-1dbjc4n"
      >
        <div
          className="c11 responsiveweb-sc-1xpiscc-10 c11 css-view-1dbjc4n"
        >
          <div
            className="css-text-76zvg2"
          >
            support-1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. three child elements 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  border-style: solid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  border-bottom-color: #DBDBDB;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 10px;
  margin-top: 10px;
  min-width: auto;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: auto;
}

.c1 .supportImageContainerClass {
  display: none;
}

.c1 .supportSummaryClass {
  display: none;
}

.c1 .summaryHidden {
  display: none;
}

.c1 .leadSummary125Class {
  display: block;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  padding-bottom: 10px;
  padding-top: 10px;
  width: 100%;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-bottom: 0;
  padding-left: 10px;
  padding-right: 10px;
  width: auto;
}

.c11 {
  padding-left: 10px;
  padding-right: 10px;
}

.c12 {
  padding-left: 10px;
  padding-right: 10px;
  border-top-color: #DBDBDB;
  border-top-style: solid;
  border-top-width: 1px;
  margin-top: 10px;
  padding-top: 10px;
}

@media (-webkit-min-device-pixel-ratio:2) {
  .c2 {
    border-bottom-width: 0.5px;
  }
}

@media (min-width:768px) {
  .c9 {
    border-bottom: none;
    border-right-color: #DBDBDB;
    border-right-style: solid;
    border-right-width: 1px;
    -webkit-flex: 0 !important;
    -ms-flex: 0 !important;
    flex: 0 !important;
    margin: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
  }
}

@media (min-width:768px) {
  .c1 .leadHeadlineClass {
    font-size: 30px;
    line-height: 30px;
  }

  .c1 .leadImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: auto;
  }

  .c1 .leadContentContainerClass {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
    margin-bottom: 10px;
    min-width: 300px;
  }

  .c1 .supportImageContainerClass {
    display: block;
  }

  .c1 .leadSummary125Class {
    display: none;
  }

  .c1 .leadSummary175Class {
    display: block;
  }
}

@media (min-width:768px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    padding-bottom: 10px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 100%;
  }
}

@media (min-width:1024px) {
  .c6 {
    -webkit-box-flex: 1.5;
    -webkit-flex-grow: 1.5;
    -ms-flex-positive: 1.5;
    flex-grow: 1.5;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 100%;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-basis: 0 !important;
    -ms-flex-preferred-size: 0 !important;
    flex-basis: 0 !important;
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    -ms-flex-positive: 2;
    flex-grow: 2;
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c0 .leadImageContainerClass {
    margin-bottom: 10px;
    min-width: 370px;
  }
}

@media (min-width:1024px) {
  .c0 .leadImageContainerClass {
    padding-right: 10px;
    min-width: auto;
  }

  .c0 .supportImageContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    max-width: 185px;
    min-width: auto;
    padding-right: 10px;
  }

  .c0 .supportContentContainerClass {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 0;
    min-width: 100px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-left: 10px;
    margin-right: 10px;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c12 {
    margin-top: 10px;
  }
}

<div
  className="c0 c1 configweb__Base-sc-11p999w-1 c0 configweb__Base-sc-11p999w-0 c1 css-view-1dbjc4n"
>
  <div
    className="c2 responsiveweb__SliceContainer-sc-2kg7gs-0 c2 css-view-1dbjc4n"
  >
    <div
      className="c3 c4 c5 responsiveweb__Base-sc-1xpiscc-3 c3 responsiveweb__Base-sc-1xpiscc-1 c4 responsiveweb__Base-sc-1xpiscc-0 c5 css-view-1dbjc4n"
    >
      <div
        className="c6 c7 c8 responsiveweb__Base-sc-1xpiscc-7 c6 responsiveweb__Base-sc-1xpiscc-5 c7 responsiveweb__Base-sc-1xpiscc-4 c8 css-view-1dbjc4n"
      >
        <div
          className="css-text-76zvg2"
        >
          lead
        </div>
      </div>
      <div
        className="c9 responsiveweb-sc-2kg7gs-1 c9 css-view-1dbjc4n"
      />
      <div
        className="c10 responsiveweb__SupportsContainer-sc-1xpiscc-8 c10 css-view-1dbjc4n"
      >
        <div
          className="c11 responsiveweb-sc-1xpiscc-10 c11 css-view-1dbjc4n"
        >
          <div
            className="css-text-76zvg2"
          >
            support-1
          </div>
        </div>
        <div
          className="c12 responsiveweb-sc-1xpiscc-9 c12 css-view-1dbjc4n"
        >
          <div
            className="css-text-76zvg2"
          >
            support-2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
